r337 (06. 09. 2025):
Fixed a crash when trying to track "Plague Doctor" achievement

r336 (05. 09. 2025):
Added option "Tracker Description Position"

r335 (29. 08. 2025):
Alaskan Deal: Added achievement tracker for "Global Warming"
Black Cat: Fixed shooting a weapon does not fail achievement tracker "Swimming Cat, Silent Burglar"
San Martín Bank: Fixed loot and deposit counting in achievement tracker "Silencioso y Codicioso"
Santa's Workshop: Added failed popup for achievement "Only Santa Brings Gifts" if the condition is not met at spawn
Reservoir Dogs: Added achievement tracker for "United We Heist"

r334 (26. 08. 2025):
Possible fix for tracker and waypoint timers showing 0 after upgrading
Player Ping Tracker: Fixed overlapping white text
Player Ping Tracker: Fixed a possible crash when finishing a heist alone in multiplayer
Timer Tracker: Fixed an issue where timers do not run down
Dragon Heist: Fixed a load crash

r333 (25. 08. 2025):
Added "Player Ping" tracker
Added option "Number of Trackers in Rows/Columns"
Achievements Screen: "Conspiracy Theory", "For The Mad Hatter" and "Only For Us Naughty Heisters" will show what heists are missing
Any related code to Escape Tracker will load if the option is enabled
Fixed an issue where Timer code adjustment is not applied if 2 or more defitions of that Timer exists (client only)
Reworked animation system in trackers
Crude Awakening: Fixed an issue where Loot Counter can count only first 4 loot bags and not all of them

r332 (12. 08. 2025):
Black Cat: Fixed an issue where achievement tracker for "Master of Floatation" does not fail after alarm and throwing 8 bodybags in stealth

r331 (05. 08. 2025):
Fixed Stamina buff not working with Sora's HUD Reborn

r330 (13. 07. 2025):
Diamond Heist: Fixed a crash after taking CFO to the roof
Fixed an issue where waypoints have incorrect data while in trackers they are correct

r329 (10. 07. 2025):
Heat Street: Fixed a crash after placing and destroying gas can