@@ -1,3 +1,7 @@
+r338 (08. 09. 2025):
+End Game Stats: Adjusted accuracy rounding to be on par with in-game accuracy rounding
+Panic Room: Added achievement tracker for "Don't You Dare Miss"
+
 r337 (06. 09. 2025):
 Fixed a crash when trying to track "Plague Doctor" achievement
 
